--- a/css/style.scss
+++ b/css/style.scss
@@ -61,8 +61,9 @@ a {
 #navbar {
     .navtop {
         color: var(--txt-color-dark);
-        height: 2.5rem;
+        height: 3.75rem;
         & > div {
+            height: 100%;
             display: grid;
             grid-template-columns: 2fr 1fr 2fr;
             justify-content: center;
@@ -104,7 +105,7 @@ a {
         }
 
         & > div {
-            height: 12rem;
+            height: 7.5rem;
             display: grid;
             grid-template-columns: repeat(3, 1fr);
             align-content: center;
