--- a/css/style.scss
+++ b/css/style.scss
@@ -114,12 +114,14 @@ a {
 
         .cart {
             display: flex;
-            flex-direction:row;
-            width:100%;
+            flex-direction: row;
+            width: 100%;
             padding-left: 1rem;
-            flex:4;
+            flex: 4;
             align-items: center;
-            i,p,img{
+            i,
+            p,
+            img {
                 margin-left: 1.5rem;
             }
             img {
@@ -127,27 +129,21 @@ a {
                 width: 3rem;
                 border-radius: 50%;
             }
-
-        }
-    }   
-}
-
- .navbottom {
-        height: 5rem;
-        & > div {
-            height: 100%;
-            ul {
-                justify-content: center;
-            }
-            li {
-                margin: 1.5rem 0px;
-            }
-        }
-        ul {
-            display: flex;
-
-            li {
-                padding-left: 3rem;
-            }
         }
     }
+}
+
+.navbottom {
+    height: 5rem;
+    & > div {
+        height: 100%;
+        ul {
+            height: 100%;
+            justify-content: center;
+            display: flex;
+        }
+        li {
+            padding: 1.5rem 1.5rem;
+        }
+    }
+}
