--- a/css/style.scss
+++ b/css/style.scss
@@ -13,13 +13,14 @@
 
 body {
     background: var(--bg-color);
-    max-width: 1440px;
+    max-width: 100%;
     margin: 0px auto;
     font-family: 'Mulish', sans-serif;
 }
+
 .container {
-    width: 100%;
-    padding: 0rem 10.3125rem;
+    max-width: 1110px;
+    margin: auto;
 }
 
 /*Utility*/
@@ -85,6 +86,7 @@ a {
 }
 
 #navbar {
+    
     .navtop {
         color: var(--txt-color-dark);
         height: 3.75rem;
@@ -166,7 +168,6 @@ a {
             height: 100%;
             ul {
                 height: 100%;
-                padding: 0rem 10.3125rem;
                 display: flex;
                 li {
                     width: 100%;
@@ -231,8 +232,7 @@ a {
         padding-top: 0.5rem;
         display: grid;
         grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(2, 1fr);
-        grid-gap: 1.6875rem;
+        grid-gap: 1.875rem;
 
         & div img {
             height: 28.125rem;
@@ -261,7 +261,7 @@ a {
             margin-top: 1.6875rem;
             width: 21.875rem;
             height: 13.125rem;
-            background-color: skyblue;
         }
     }
 }
+
