--- a/css/style.css
+++ b/css/style.css
@@ -129,38 +129,35 @@ a {
 
 #navbar .navtop {
   color: var(--txt-color-dark);
-  height: 3.75rem;
-}
-
-#navbar .navtop > div {
-  height: 100%;
-  width: 100%;
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 2fr 1fr 2fr;
-      grid-template-columns: 2fr 1fr 2fr;
-  justify-items: flex-start;
+  -ms-grid-columns: (1fr)[2];
+      grid-template-columns: repeat(2, 1fr);
+  height: 3.75rem;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
 }
 
+#navbar .navtop .navtop-right:last-child {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 2fr 1fr;
+      grid-template-columns: 2fr 1fr;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  justify-items: flex-end;
+  height: 3.75rem;
+  width: 100%;
+}
+
 #navbar .navtop p {
   font-size: 0.75rem;
-  text-align: center;
+  text-align: left;
 }
 
-#navbar .navtop ul {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-#navbar .navtop ul li {
-  padding: 0.5rem 1rem;
-}
-
-#navbar .navtop ul li i {
+#navbar .navtop p i {
   padding-right: 1rem;
 }
 
@@ -187,8 +184,8 @@ a {
   width: 100%;
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (1fr)[3];
-      grid-template-columns: repeat(3, 1fr);
+  -ms-grid-columns: 2fr 2fr 1fr;
+      grid-template-columns: 2fr 2fr 1fr;
   -ms-flex-line-pack: center;
       align-content: center;
 }
