--- a/css/style.css
+++ b/css/style.css
@@ -102,7 +102,14 @@ a {
 
 .line {
   width: 65.5rem;
-  border: 1px dashed #e0e0e0;
+  border-bottom: 1px dashed #e0e0e0;
+  margin: auto;
+}
+
+.flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .btn-booking {
@@ -263,16 +270,75 @@ a {
   padding: 1rem 0rem;
 }
 
+.flash-offer {
+  height: 1.25rem;
+  width: 4.375rem;
+  font-size: 0.625rem;
+  line-height: 12.55px;
+  text-align: center;
+  padding: 0.25rem 0.35rem;
+  border-radius: 3px;
+}
+
+.flash-offer p {
+  font-size: 10px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 13px;
+  text-align: left;
+}
+
+.flash-offer-2 {
+  height: 1.875rem;
+  width: 5.938rem;
+  font-size: 0.625rem;
+  line-height: 12.55px;
+  text-align: center;
+  padding: 0.5rem 0.35rem;
+  border-radius: 3px;
+}
+
+.flash-offer-2 p {
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 15px;
+  text-align: left;
+}
+
+.flash-offer-3 {
+  height: 1.125rem;
+  width: 4rem;
+  font-size: 0.625rem;
+  line-height: 12.55px;
+  text-align: center;
+  padding: 0.125rem 0.35rem;
+  border-radius: 3px;
+}
+
+.flash-offer-3 p {
+  font-size: 8px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 10px;
+  text-align: left;
+}
+
+.book-now {
+  padding: 0.625rem 1.625rem;
+}
+
+.stars {
+  color: #f2994a;
+  font-size: 12px;
+}
+
 #home-content .hotel-name {
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: (1fr)[2];
       grid-template-columns: repeat(2, 1fr);
   height: 6.25rem;
-}
-
-#home-content .hotel-name .stars {
-  color: #f2994a;
 }
 
 #home-content .hotel-name .hotel {
@@ -284,16 +350,6 @@ a {
 
 #home-content .hotel-name .hotel span {
   margin: 1rem;
-}
-
-#home-content .hotel-name .flash-offer {
-  height: 1.25rem;
-  width: 4.375rem;
-  font-size: 0.625rem;
-  line-height: 12.55px;
-  text-align: center;
-  padding: 0.25rem 0.35rem;
-  border-radius: 3px;
 }
 
 #home-content .hotel-name .hotel-name-area {
@@ -484,4 +540,129 @@ a {
 #hotel-info .package-card-3x i {
   margin-right: 1.3rem;
 }
+
+#hotel-info .guest-review h1 {
+  font-family: Mulish;
+  font-size: 36px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 45px;
+  letter-spacing: 0em;
+  text-align: center;
+}
+
+#hotel-info .guest-review .other-packages {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: auto auto auto;
+      grid-template-columns: auto auto auto;
+  -ms-grid-rows: 1fr 1fr;
+      grid-template-rows: 1fr 1fr;
+  grid-gap: 1.875rem;
+}
+
+#hotel-info .guest-review .other-packages .packages-type-1 {
+  height: 31.25rem;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-column: 1 / span 2;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+#hotel-info .guest-review .other-packages .packages-type-1 > div {
+  height: 31.25rem;
+  width: 22.813rem;
+}
+
+#hotel-info .guest-review .other-packages .packages-type-1 > div:first-child {
+  background: url(/img/image1.jpg) no-repeat center center/cover;
+  border-radius: 8px 0px 0px 8px;
+}
+
+#hotel-info .guest-review .other-packages .packages-type-1 > div:last-child {
+  padding: 3rem 1.3rem 2.15rem 2.6rem;
+  border-radius: 0px 8px 8px 0px;
+}
+
+#hotel-info .guest-review .other-packages .packages-type-1 > div:last-child h3 {
+  margin-top: 6px;
+}
+
+#hotel-info .guest-review .other-packages .packages-type-1 > div:last-child .text {
+  margin-top: 1.6rem;
+}
+
+#hotel-info .guest-review .other-packages .packages-type-1 > div > p {
+  margin-top: 1.625rem;
+}
+
+#hotel-info .guest-review .other-packages .packages-type-1 > div ul li {
+  margin: 0;
+  padding-top: 0.6rem;
+}
+
+#hotel-info .guest-review .other-packages .packages-type-1 > div .price {
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 30px;
+  text-align: left;
+  width: 55%;
+}
+
+#hotel-info .guest-review .other-packages .packages-type-2 {
+  height: 31.25rem;
+}
+
+#hotel-info .guest-review .other-packages .packages-type-2 > div {
+  width: 21.875rem;
+  height: 50%;
+}
+
+#hotel-info .guest-review .other-packages .packages-type-2 > div:first-child {
+  background: url(/img/image1.jpg) no-repeat center center/cover;
+  border-radius: 8px 8px 0px 0px;
+  padding-top: 1.625rem;
+}
+
+#hotel-info .guest-review .other-packages .packages-type-2 > div:last-child {
+  padding: 1.875rem 1.3rem 1.5rem 2rem;
+  border-radius: 0px 0px 8px 8px;
+}
+
+#hotel-info .guest-review .other-packages .packages-type-2 > div:last-child h3 {
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 23px;
+  text-align: left;
+}
+
+#hotel-info .guest-review .other-packages .packages-type-2 > div:last-child ul li {
+  font-family: Mulish;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 15px;
+  letter-spacing: 0em;
+  text-align: left;
+  padding-top: 0.6rem;
+}
+
+#hotel-info .guest-review .other-packages .packages-type-2 > div:last-child > p {
+  margin-top: 1.625rem;
+}
+
+#hotel-info .guest-review .other-packages .packages-type-2 > div:last-child .price {
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 30px;
+  text-align: left;
+  width: 55%;
+}
+
+/* hotel info end */
 /*# sourceMappingURL=style.css.map */
