--- a/css/style.css
+++ b/css/style.css
@@ -549,6 +549,7 @@ a {
   line-height: 45px;
   letter-spacing: 0em;
   text-align: center;
+  margin: 2.5rem 0rem 4rem 0rem;
 }
 
 #hotel-info .guest-review .other-packages {
