--- a/css/style.scss
+++ b/css/style.scss
@@ -467,6 +467,8 @@ a {
             line-height: 45px;
             letter-spacing: 0em;
             text-align: center;
+
+            margin:2.5rem 0rem 4rem 0rem;
         }
 
         .other-packages {
